[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mylib = {git = "git@github.com:dpompeu-xgeeks/example-lib.git", rev = "cad773cb633c3d8be5ddd16ef6767d5d0bc6e7cc"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
